--- a/CalendarGxChilang.html
+++ b/CalendarGxChilang.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lịch Công Giáo</title>
-    <link rel="manifest" href="/CalendarGxChilang/manifest.json">
+    <link rel="manifest" href="./manifest.json">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-      <meta name="theme-color" content="#2196f3">
-      <link rel="stylesheet" href="style.css">
+    <meta name="theme-color" content="#2196f3">
+    <link rel="stylesheet" href="style.css">
   
     </style>
 
