--- a/CalendarGxChilang.html
+++ b/CalendarGxChilang.html
@@ -115,13 +115,16 @@
   
 
 <!-- Chọn ngày, tuần và tháng vủa mobi -->
-<div class="controls-container">
-    <!-- Biểu tượng cho điện thoại -->
-    <div class="mobile-controls">
-        <button class="icon-button" onclick="toggleDatePicker()">Ngày 📅</button> <!-- Biểu tượng chọn ngày -->
-        <button class="icon-button" onclick="toggleWeekPicker()">Tuần 🧭</button> <!-- Biểu tượng chọn tuần -->
-        <button class="icon-button" onclick="toggleMonthPicker()">Tháng 🗓</button> <!-- Biểu tượng chọn tháng/năm -->
+<footer class="mobile-footer">
+    <div class="controls-container">
+        <!-- Biểu tượng cho điện thoại -->
+        <div class="mobile-controls">
+            <button class="icon-button" onclick="toggleDatePicker()">Ngày 📅</button> <!-- Biểu tượng chọn ngày -->
+            <button class="icon-button" onclick="toggleWeekPicker()">Tuần 🧭</button> <!-- Biểu tượng chọn tuần -->
+            <button class="icon-button" onclick="toggleMonthPicker()">Tháng 🗓</button> <!-- Biểu tượng chọn tháng/năm -->
+        </div>
     </div>
+</footer>
 
     <!-- Các trường chọn ngày, tháng, năm cho thiết bị lớn -->
     <div class="desktop-controls">
