--- a/CalendarGxChilang.html
+++ b/CalendarGxChilang.html
@@ -118,8 +118,10 @@
 <footer id="mobile-footer" class="mobile-footer">
     <div class="controls-container">
         <div class="mobile-controls">
-            <button class="icon-button" onclick="toggleDatePicker()">📅</button>
-            <button class="icon-button" onclick="toggleWeekPicker()">🧭</button>
+            <button class="icon-button" onclick="toggleDatePicker()">📅</button>&nbsp;&nbsp;&nbsp;&nbsp;
+            <button onclick="displayWeekInfo('previous')">⏮</button>
+            <button onclick="displayWeekInfo('current')">🧭</button>
+            <button onclick="displayWeekInfo('next')">⏭</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <button class="icon-button" onclick="toggleMonthPicker()">🗓</button>
         </div>
     </div>
