--- a/CalendarGxChilang.html
+++ b/CalendarGxChilang.html
@@ -118,7 +118,7 @@
 <footer id="mobile-footer" class="mobile-footer">
     <div class="controls-container">
         <div class="mobile-controls">
-            <button class="icon-button" onclick="toggleDatePicker()">📅</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;<button class="icon-button" onclick="toggleDatePicker()">📅</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <button onclick="displayWeekInfo('previous')">⏮</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <button onclick="displayWeekInfo('current')">🧭</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <button onclick="displayWeekInfo('next')">⏭</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
