--- a/CalendarGxChilang.html
+++ b/CalendarGxChilang.html
@@ -39,7 +39,7 @@
 
 <!-- Phần Header -->
 <header class="calendar-header">
-    LỊCH PHỤNG VỤ CÔNG GIÁO
+    GX CHILĂNG ĐÀLẠT
 </header>
 
 <div class="modal reading-modal" id="readingModal">
