--- a/CalendarGxChilang.html
+++ b/CalendarGxChilang.html
@@ -39,7 +39,7 @@
 
 <!-- Phần Header -->
 <header class="calendar-header">
-    GX CHILĂNG ĐÀLẠT
+    GX CHI LĂNG GP. ĐÀLẠT
 </header>
 
 <div class="modal reading-modal" id="readingModal">
