--- a/liturgy.html
+++ b/liturgy.html
@@ -121,10 +121,10 @@
 <footer id="mobile-footer" class="mobile-footer">
     <div class="controls-container">
         <div class="mobile-controls">
-            <button class="icon-button" onclick="toggleDatePicker()">📅</button>&nbsp;&nbsp;&nbsp;&nbsp;
+           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="icon-button" onclick="toggleDatePicker()">📅</button>&nbsp;
             <button onclick="displayWeekInfo('previous')">⏮</button>
             <button onclick="displayWeekInfo('current')">🧭</button>
-            <button onclick="displayWeekInfo('next')">⏭</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <button onclick="displayWeekInfo('next')">⏭</button>&nbsp;&nbsp;&nbsp;
             <button class="icon-button" onclick="toggleMonthPicker()">🗓</button>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <!-- Nút để mở modal hiển thị trang web -->
