--- a/CalendarGxChilang.html
+++ b/CalendarGxChilang.html
@@ -359,7 +359,7 @@ function getWeekday(date) {
 
     function getMonthName(date) {
         const months = [
-            "THÁNG MỘT", "THÁNG HAI", "THÁNG BA", "THÁNG TƯ", "THÁNG NĂM", "THÁNG SÁU",
+            "THÁNG GIÊNG", "THÁNG HAI", "THÁNG BA", "THÁNG TƯ", "THÁNG NĂM", "THÁNG SÁU",
             "THÁNG BẢY", "THÁNG TÁM", "THÁNG CHÍN", "THÁNG MƯỜI", "THÁNG MƯỜI MỘT", "THÁNG MƯỜI HAI"
         ];
         return months[date.getMonth()];
@@ -1614,3 +1614,4 @@ function boldText() {
 
 </body>
 </html>
+
